Add Gulp depedency

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "Ash",
   "license": "MIT",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/juice49/slush-puppie.git"
+    "type": "git",
+    "url": "https://github.com/juice49/slush-puppie.git"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
     "node-notifier": "^4.2.3",
     "slug": "^0.9.1",
     "titlecase": "^1.0.2"
